fixed spacing on contact me

--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,10 @@ img {
 .contact-form {
   width: 800px;
   height: 400px;
-  margin: 0 auto;
-  padding: 20px;
+  padding: 30px;
   background-color: #333;
   border-radius: 10px;
+  align-content: center;
 }
 
 /* form fields */
